Prevent content overflow in intro screens

--- a/src/components/intro-screen/intro-screen.css
+++ b/src/components/intro-screen/intro-screen.css
@@ -1,6 +1,6 @@
 .intro-screen {
     position: relative;
-    height: calc(100vh - 66px);
+    min-height: calc(100vh - 66px);
 
     display: flex;
     flex-direction: column;
@@ -15,6 +15,8 @@
 
 .intro-screen-content {
     flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .intro-screen-scroll-button {
