--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -1,5 +1,6 @@
 .homepage-intro-content {
-    height: 100%;
+    flex: 1;
+
     display: flex;
     flex-direction: column;
     justify-content: space-around;
